--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Handyman Website</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+</head>
+<body>
+    <header>
+        <h1>Welcome to Handyman Services</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="home">
+            <h2>Home</h2>
+            <p>Your one-stop solution for all handyman services.</p>
+        </section>
+
+        <section id="services">
+            <h2>Services</h2>
+            <p>We offer a variety of services including plumbing, electrical work, and carpentry.</p>
+        </section>
+
+        <section id="about">
+            <h2>About Us</h2>
+            <p>Learn more about our team and our mission.</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Get in touch with us for a quote or any inquiries.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Handyman Services. All rights reserved.</p>
+    </footer>
+</body>
+</html>
